# Portfolio-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  linkedin_post.md  plan.md  pyproject.toml
app/: config.py  deps.py  main.py
app/cache/: exact.py  semantic.py
app/core/: logging.py  middleware.py  mongo.py  qdrant.py  redis.py
app/llm/: openrouter.py  routing.py
app/llm/prompts/: rewrite.md  system.md
app/modules/chat/: controller.py  repository.py  schemas.py  service.py
app/modules/eval/: controller.py  dataset.json  metrics.py  repository.py  service.py
app/modules/health/: controller.py  service.py
app/modules/hire/: controller.py  email_client.py  repository.py  schemas.py  service.py  validators.py
app/modules/hire/templates/: chetan_details.html  chetan_details.txt
app/modules/ingest/: controller.py  crawler.py  schemas.py  service.py
app/rag/: chunker.py  embeddings.py  ingest.py  prompt.py  reranker.py  retriever.py
data/: faqs.yaml  linkedin.md  naukri.md  projects.yaml
docs/: api-collection.md  api-implementation-guide.md
docs/postman/: CHET-ai.postman_collection.json
llm/: context.md
scripts/: eval.sh  ingest.sh  seed_indexes.py
tests/: test_semantic_cache.py
tests/modules/chat/: test_service_memory.py
tests/modules/hire/: test_email_client.py  test_service.py  test_validators.py
tests/modules/ingest/: test_crawler.py  test_service.py
tests/rag/: test_prompt.py  test_retriever.py
